<resources>
    <string name="app_name">QuizApp</string>
    <string name="question_text">Question will appear here</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
    the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
    and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
    in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
    freshwater lake.</string>

    <string name="true_button">True</string>
    <string name="false_button">false</string>

    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>


    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="app_title">Quiz Challenge</string>
    <string name="finish_button">Finish Quiz</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="cheats_remaining">Cheats Remaining: %d</string>
    <string name="no_cheats_remaining">No cheat tokens remaining!</string>
</resources>